cmake_minimum_required(VERSION 3.17)
project(M2 C)

set(CMAKE_C_STANDARD 99)

add_executable(M2 main_p.c)

include_directories(../Epucker/library)
include_directories(../Epucker/library/a_d)
include_directories(../Epucker/library/a_d/advance_ad_scan)
include_directories(../Epucker/library/bluetooth)
include_directories(../Epucker/library/camera/fast_2_timer)
include_directories(../Epucker/library/camera/slow_3_timer)
include_directories(../Epucker/library/codec)
include_directories(../Epucker/library/contrib/LIS_sensors_turret)
include_directories(../Epucker/library/contrib/SWIS_com_module)
include_directories(../Epucker/library/fft)
include_directories(../Epucker/library/I2C)
include_directories(../Epucker/library/matlab)
include_directories(../Epucker/library/motor_led)
include_directories(../Epucker/library/motor_led/advance_one_timer)
include_directories(../Epucker/library/motor_led/advance_one_timer/fast_agenda)
include_directories(../Epucker/library/uart)
include_directories("C:/Program Files (x86)/Microchip/MPLAB C30/support/h")
